@@ -107,13 +107,10 @@ public class StoreFactoryRule extends Rule {
      * @param defaultName Default Class
      * @param attributes current digester attribute elements
      * @return new configured object instance
-     * @throws ClassNotFoundException Class was not found
-     * @throws InstantiationException Error creating an instance
-     * @throws IllegalAccessException Security exception
+     * @throws ReflectiveOperationException Error creating an instance
      */
     protected Object newInstance(String attr, String defaultName,
-            Attributes attributes) throws ClassNotFoundException,
-            InstantiationException, IllegalAccessException {
+            Attributes attributes) throws ReflectiveOperationException {
         String className = defaultName;
         if (attr != null) {
             String value = attributes.getValue(attr);
@@ -121,6 +118,6 @@ public class StoreFactoryRule extends Rule {
                 className = value;
         }
         Class<?> clazz = Class.forName(className);
-        return clazz.newInstance();
+        return clazz.getConstructor().newInstance();
     }
 }
